--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -11,6 +11,7 @@ endfunction()
 create_app(glminipeak minipeak-helpers-gl z)
 create_app(glmempeak minipeak-helpers-gl z)
 create_app(clminipeak minipeak-helpers-cl z)
+create_app(clmempeak minipeak-helpers-cl z)
 
 generate_spv_headers(spv_headers
         shaders/compute_sp_v1.glsl
