--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -34,10 +34,13 @@ find_path(KERNELHEADERS_DIR
   linux/user.h
   PATHS /usr/src/linux-headers-${KERNEL_RELEASE}/include /lib/modules/${KERNEL_RELEASE}/build/include
 )
+find_file(DRM_HEADER xf86drmMode.h PATHS ${KERNELHEADERS_DIR})
 
-if(KERNELHEADERS_DIR)
-  add_executable(panfrost_drmDump panfrost_drmDump.c)
-  target_compile_definitions(panfrost_drmDump PUBLIC -D__user=)
-  target_link_libraries(panfrost_drmDump drm)
-  target_include_directories(panfrost_drmDump PUBLIC ${KERNELHEADERS_DIR}/uapi/drm)
+if(DRM_HEADER)
+    if(KERNELHEADERS_DIR)
+      add_executable(panfrost_drmDump panfrost_drmDump.c)
+      target_compile_definitions(panfrost_drmDump PUBLIC -D__user=)
+      target_link_libraries(panfrost_drmDump drm)
+      target_include_directories(panfrost_drmDump PUBLIC ${KERNELHEADERS_DIR}/uapi/drm)
+    endif()
 endif()
