--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -2,7 +2,7 @@ function(create_app name mainlib)
     if(TARGET ${mainlib})
         add_executable(${name} ${name}.cpp)
         target_link_libraries(${name} ${mainlib} ${ARGN})
-        install(TARGETS ${name} RUNTIME_DEPENDENCY_SET depthlib DESTINATION bin)
+        install(TARGETS ${name} RUNTIME_DEPENDENCY_SET minipeak-helpers DESTINATION bin)
     else()
         message("${name} not building since ${mainlib} isn't built")
     endif()
